Tidying up bibliography

--- a/literature.bib
+++ b/literature.bib
@@ -18,9 +18,7 @@
   year={2010},
   isbn={0470484101},
   url={https://www.amazon.com/How-Learning-Works-Research-Based-Principles/dp/0470484101/},
-  annotate={An excellent overview of what we know about education and why we believe
-    it's true, covering everything from cognitive psychology to social
-    factors.}
+  annotate={An excellent overview of what we know about education and why we believe it's true, covering everything from cognitive psychology to social factors.}
 }
 
 @inproceedings{bib:barker-practice-adoption,
@@ -33,8 +31,7 @@
   numpages={6},
   doi={10.1145/2676723.2677282},
   publisher={ACM},
-  annotate={Describes findings from a two-part study of how computer science educators
-    adopt new teaching practices.}
+  annotate={Describes findings from a two-part study of how computer science educators adopt new teaching practices.}
 }
 
 @techreport{bib:baume-outcomes,
@@ -65,8 +62,7 @@
   year={2011},
   pages={63--73},
   doi={10.5406/amerjpsyc.124.1.0063},
-  annotate={Presents a study showing that note-taking improves retention most
-    at deeper levels of understanding.}
+  annotate={Presents a study showing that note-taking improves retention most at deeper levels of understanding.}
 }
 
 @inproceedings{bib:brown-empirical,
@@ -76,8 +72,7 @@
   pages={43--50},
   year={2014},
   doi={dx.doi.org/10.1145/2632320.2632343},
-  annotate={Uses data from over 100,000 students to show that educators
-    know less than they think about what mistakes novice programmers actually make.}
+  annotate={Uses data from over 100,000 students to show that educators know less than they think about what mistakes novice programmers actually make.}
 }
 
 @book{bib:epstein-thinking-physics,
@@ -142,8 +137,7 @@
   year={2014},
   pages={187-–199},
   doi={10.1187/cbe.13-12-0235},
-  annotate={Summarizes the best practices for providing instructional feedback,
-    and recommends specific strategies for providing feedback.}
+  annotate={Summarizes the best practices for providing instructional feedback, and recommends specific strategies for providing feedback.}
 }
 
 @book{bib:green-babt,
@@ -153,8 +147,7 @@
   year={2014},
   isbn={9780393244151},
   url={https://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393351084/},
-  annotate={A well-written look at why educational reforms in the past
-   50 years have mostly missed the mark, and what we should be doing instead.}
+  annotate={A well-written look at why educational reforms in the past 50 years have mostly missed the mark, and what we should be doing instead.}
 }
 
 @misc{bib:guzdial-blog,
@@ -168,12 +161,11 @@
 @book{bib:guzdial-lcd,
   author={Mark Guzdial},
   title={Learner-Centered Design of Computing Education: Research on Computing for Everyone},
-  publisher={Morgan \& Claypool},
+  publisher={Morgan & Claypool},
   year={2015},
   isbn={978-1627053518},
   url={https://www.amazon.com/Learner-Centered-Design-Computing-Education-Human-Centered/dp/1627053514/},
-  annotate={An evidence-based argument that we must design computing education for everyone,
-    not just people who think they are going to become full-time professional programmers.}
+  annotate={An evidence-based argument that we must design computing education for everyone, not just people who think they are going to become full-time professional programmers.}
 }
 
 @inproceedings{bib:guzdial-mediacomp-retrospective,
@@ -201,9 +193,7 @@
   doi={10.1002/tea.20439},
   pages={952--984},
   year={2011},
-  annotate={Describes eight approaches to effecting change in STEM education that
-    form a useful framework for thinking about how free-range workshops can go
-    mainstream.}
+  annotate={Describes eight approaches to effecting change in STEM education that form a useful framework for thinking about how free-range workshops can go mainstream.}
 }
 
 @book{bib:huston-dont-know,
@@ -213,8 +203,7 @@
   year={2009},
   isbn={978-0674035805},
   url={https://www.amazon.com/Teaching-What-You-Dont-Know/dp/0674035801/},
-  annotate={A pointed, funny, and very useful book that explores exactly what the
-    title suggests.}
+  annotate={A pointed, funny, and very useful book that explores exactly what the title suggests.}
 }
 
 @book{bib:kernighan-plauger-elements,
@@ -257,8 +246,7 @@
   title={Why Minimal Guidance During Instruction Does Not Work: An Analysis of the Failure of Constructivist, Discovery, Problem-Based, Experiential, and Inquiry-Based Teaching},
   volume=41,
   year=2006,
-  annotate={Argues that inquiry-based learning is less effective for novices than
-    guided instruction.}
+  annotate={Argues that inquiry-based learning is less effective for novices than guided instruction.}
 }
 
 @inproceedings{bib:koedinger-doing-watching,
@@ -281,14 +269,13 @@
   year={2016},
   isbn={978-1118944493},
   url={https://www.amazon.com/Small-Teaching-Everyday-Lessons-Learning/dp/1118944496/},
-  annotate={Presents a selection of accessible evidence-based practices that teachers can adopt
-    when they little time and few resources.}
+  annotate={Presents a selection of accessible evidence-based practices that teachers can adopt when they little time and few resources.}
 }
 
 @misc{bib:lee-create-inclusive-community,
   author={Cynthia Lee},
   title={What can I do today to create a more inclusive community in CS?},
-  howpublished={https://docs.google.com/document/d/1hLivou9-\_wmsZuzKI2pCGQu0KHVIgYfJSaYhvTgO0Wo/},
+  howpublished={https://docs.google.com/document/d/1hLivou9-_wmsZuzKI2pCGQu0KHVIgYfJSaYhvTgO0Wo/},
   year={2017},
   annotate={A practical checklist of things instructors can do to make their computing classes more inclusive.}
 }
@@ -301,8 +288,7 @@
   edition={2},
   isbn={978-1118901854},
   url={https://www.amazon.com/Teach-Like-Champion-2-0-Techniques/dp/1118901851/},
-  annotate={Presents 62 classroom techniques drawn from intensive study of thousands
-    of hours of video of good teachers in action.}
+  annotate={Presents 62 classroom techniques drawn from intensive study of thousands of hours of video of good teachers in action.}
 }
 
 @book{bib:littky-big-picture,
@@ -335,8 +321,7 @@
   year={2003},
   isbn={9780262632690},
   url={https://www.amazon.com/Unlocking-Clubhouse-Women-Computing-Press/dp/0262632691/},
-  annotate={A groundbreaking report on the gender imbalance in computing, and the
-    steps Carnegie-Mellon took to address the problem.}
+  annotate={A groundbreaking report on the gender imbalance in computing, and the steps Carnegie-Mellon took to address the problem.}
 }
 
 @book{bib:margolis-shallow,
@@ -356,8 +341,7 @@
   pages={43--52},
   volume={38},
   year={2003},
-  annotate={Shows how research into how we absorb and process information can be
-    applied to the design of instructional materials.}
+  annotate={Shows how research into how we absorb and process information can be applied to the design of instructional materials.}
 }
 
 @article{bib:mueller-note-taking,
@@ -369,8 +353,7 @@
   pages={1159-1168},
   year={2014},
   doi={10.1177/0956797614524581},
-  annotate={Presents evidence that taking notes by hand is more effective
-    than taking notes on a laptop.}
+  annotate={Presents evidence that taking notes by hand is more effective than taking notes on a laptop.}
 }
 
 @article{bib:orndorff-note-taking,
@@ -394,13 +377,11 @@
   url={http://doi.acm.org/10.1145/2960310.2960312},
   doi={10.1145/2960310.2960312},
   publisher={ACM},
-  annotate={Presents a statistical analysis and an experiment which jointly show
-    that despite popular myth, grades in computing classes are not bimodal---i.e.,
-    there is no ``geek gene''.}
+  annotate={Presents a statistical analysis and an experiment which jointly show that despite popular myth, grades in computing classes are not bimodal–i.e., there is no geek gene.}
 }
 
 @book{bib:petre-expertise,
-  author={Marian Petre and Andr\'{e} van der Hoek and Yen Quach},
+  author={Marian Petre and André van der Hoek and Yen Quach},
   title={Software Design Decoded: 66 Ways Experts Think},
   publisher={MIT Press},
   year={2016},
@@ -421,9 +402,7 @@
   url={http://doi.acm.org/10.1145/2492007.2492020},
   doi={10.1145/2492007.2492020},
   publisher={ACM},
-  annotate={Summarizes the evidence that three techniques---peer instruction, media
-    computation, and pair programming---can significantly improve outcomes
-    in introductory programming courses.}
+  annotate={Summarizes the evidence that three techniques–peer instruction, media computation, and pair programming–can significantly improve outcomes in introductory programming courses.}
 }
 
 @book{bib:preskill-discussion,
@@ -448,7 +427,7 @@
 }
 
 @book{bib:schon-practitioner,
-  author={Donad A. Sch{\"o}n},
+  author={Donad A. Schön},
   title={The Reflective Practitioner: How Professionals Think In Action},
   publisher={Basic Books},
   year={1984},
@@ -464,9 +443,7 @@
   year={1999},
   isbn={9780300128789},
   url={https://www.amazon.com/Seeing-like-State-Certain-Condition/dp/0300078153/},
-  annotate={Presents a compelling case that centrally-managed, top-down ventures
-    will always be less effective than grassroots alternatives because large
-    organizations consistently prefer uniformity over productivity.}
+  annotate={Presents a compelling case that centrally-managed, top-down ventures will always be less effective than grassroots alternatives because large organizations consistently prefer uniformity over productivity.}
 }
 
 @book{bib:steele-vivaldi,
