Reviving some material

--- a/literature.bib
+++ b/literature.bib
@@ -75,6 +75,16 @@
   annotate={Uses data from over 100,000 students to show that educators know less than they think about what mistakes novice programmers actually make.}
 }
 
+@book{bib:debruyckere-urban-myths,
+  author={Pedro De Bruyckere and Paul A. Kirschner and Casper D. Hulshof},
+  title={Urban Myths about Learning and Education},
+  publisher={Academic Press},
+  year={2015},
+  url={https://www.amazon.com/Urban-Myths-about-Learning-Education/dp/0128015373/},
+  isbn={978-0128015377},
+  annotate={Describes and debunks some widely-held myths about how people learn.}
+}
+
 @book{bib:epstein-thinking-physics,
   author={L.C. Epstein},
   title={Thinking Physics is Gedanken Physics},
@@ -128,6 +138,16 @@
   annotate={Describes how having a coach can improve practice in a wide variety of fields.}
 }
 
+@book{bib:gelman-stats,
+  author={Andrew Gelman and Deborah Nolan},
+  title={Teaching Statistics: A Bag of Tricks},
+  publisher={Oxford University Press},
+  year={2002},
+  isbn={978-0198572244},
+  url={https://www.amazon.com/Teaching-Statistics-Tricks-Andrew-Gelman/dp/0198572247/},
+  annotate={A collection of useful motivating examples for teaching statistics.}
+}
+
 @misc{bib:gormally-teaching-feedback,
   author={Cara Gormally and Mara Evans and Peggy Brickman},
   title={Feedback about Teaching in Higher Ed: Neglected Opportunities to Promote Change},
@@ -179,6 +199,14 @@
   doi={10.1145/2493394.2493397},
   publisher={ACM},
   annotate={A look back on 10 years of media computation research.}
+}
+
+@misc{bib:buzdial-top10,
+  author={Mark Guzdial},
+  title={Top 10 Myths About Teaching Computer Science},
+  howpublished={http://cacm.acm.org/blogs/blog-cacm/189498-top-10-myths-about-teaching-computer-science/fulltext},
+  year={2015},
+  annotate={Ten things many people believe that aren't true.}
 }
 
 @article{bib:henderson-facilitating,
