--- a/literature.bib
+++ b/literature.bib
@@ -1,4 +1,4 @@
-@article{bib:aiken-note-taking,
+@article{aiken-note-taking,
   author={Edwin G. Aiken and Gary S. Thomas and William A. Shennum},
   title={Memory for a lecture: Effects of notes, lecture rate, and informational density},
   journal={Journal of Educational Psychology},
@@ -11,7 +11,7 @@
   annotate={A landmark study showing that taking notes improves retention when learning.}
 }
 
-@book{bib:ambrose-hlw,
+@book{ambrose-hlw,
   author={Susan A. Ambrose and Michael W. Bridges and Michele DiPietro and Marsha C. Lovett and Marie K. Norman},
   title={How Learning Works: Seven Research-Based Principles for Smart Teaching},
   publisher={Jossey-Bass},
@@ -21,7 +21,7 @@
   annotate={An excellent overview of what we know about education and why we believe it's true, covering everything from cognitive psychology to social factors.}
 }
 
-@inproceedings{bib:barker-practice-adoption,
+@inproceedings{barker-practice-adoption,
   author={Barker, Lecia and Hovey, Christopher Lynnly and Gruning, Jane},
   title={What Influences CS Faculty to Adopt Teaching Practices?},
   booktitle={Proceedings of the 46th ACM Technical Symposium on Computer Science Education},
@@ -34,7 +34,7 @@
   annotate={Describes findings from a two-part study of how computer science educators adopt new teaching practices.}
 }
 
-@techreport{bib:baume-outcomes,
+@techreport{baume-outcomes,
   author={D. Baume},
   title={Writing and using good learning outcomes},
   publisher={Leeds Metropolitan University Press},
@@ -43,7 +43,7 @@
   annotate={A useful detailed guide to constructing useful learning outcomes.}
 }
 
-@book{bib:benner,
+@book{benner,
   author={Patricia Benner},
   title={From Novice to Expert: Excellence and Power in Clinical Nursing Practice},
   publiser={Pearson},
@@ -53,7 +53,7 @@
   annotate={A classic study of clinical judgment and how expertise develops.}
 }
 
-@article{bib:bohay-note-taking,
+@article{bohay-note-taking,
   author={Mark Bohay and Daniel P. Blakely and Andrea K. Tamplin and Gabriel A. Radvansky},
   title={Note Taking, Review, Memory, and Comprehension},
   journal={American Journal of Psychology},
@@ -65,7 +65,7 @@
   annotate={Presents a study showing that note-taking improves retention most at deeper levels of understanding.}
 }
 
-@inproceedings{bib:brown-empirical,
+@inproceedings{brown-empirical,
   author={Neil CC Brown and Amjad Altadmri},
   title={Investigating Novice Programming Mistakes: Educator Beliefs vs. Student Data},
   booktitle={Proceedings of the Tenth Annual Conference on International Computing Education Research},
@@ -75,7 +75,7 @@
   annotate={Uses data from over 100,000 students to show that educators know less than they think about what mistakes novice programmers actually make.}
 }
 
-@book{bib:debruyckere-urban-myths,
+@book{debruyckere-urban-myths,
   author={Pedro De Bruyckere and Paul A. Kirschner and Casper D. Hulshof},
   title={Urban Myths about Learning and Education},
   publisher={Academic Press},
@@ -85,7 +85,7 @@
   annotate={Describes and debunks some widely-held myths about how people learn.}
 }
 
-@book{bib:epstein-thinking-physics,
+@book{epstein-thinking-physics,
   author={L.C. Epstein},
   title={Thinking Physics is Gedanken Physics},
   publisher={Insight Press},
@@ -95,7 +95,7 @@
   annotate={An entertaining problem-based introduction to thinking like a physicist.}
 }
 
-@book{bib:fehily-sql,
+@book{fehily-sql,
   author={Chris Fehily},
   title={SQL: Visual QuickStart Guide},
   publisher={Peachpit Press},
@@ -106,7 +106,7 @@
   annotate={An introduction to SQL that is both a good tutorial and a good reference guide.}
 }
 
-@inproceedings{bib:fincher-stories-change,
+@inproceedings{fincher-stories-change,
   author={Sally Fincher and Brad Richards and Janet Finlay and Helen Sharp and Isobel Falconer},
   title={Stories of Change: How Educators Change Their Practice},
   booktitle={2012 Frontiers in Education Conference Proceedings},
@@ -116,7 +116,7 @@
   annotate={A detailed look at how educators actually adopt new teaching practices.}
 }
 
-@inproceedings{bib:fincher-warrens-questions,
+@inproceedings{fincher-warrens-questions,
   author={Sally Fincher and Josh Tenenberg},
   title={Warren's Question},
   booktitle={Proceedings of the Third International Workshop on Computing Education Research},
@@ -128,7 +128,7 @@
   annotate={A detailed look at a particular instance of transferring a teaching practice.}
 }
 
-@article{bib:gawande-personal-best,
+@article{gawande-personal-best,
   author={Atul Gawande},
   title={Personal Best},
   journal={The New Yorker},
@@ -138,7 +138,7 @@
   annotate={Describes how having a coach can improve practice in a wide variety of fields.}
 }
 
-@book{bib:gelman-stats,
+@book{gelman-stats,
   author={Andrew Gelman and Deborah Nolan},
   title={Teaching Statistics: A Bag of Tricks},
   publisher={Oxford University Press},
@@ -148,7 +148,7 @@
   annotate={A collection of useful motivating examples for teaching statistics.}
 }
 
-@misc{bib:gormally-teaching-feedback,
+@misc{gormally-teaching-feedback,
   author={Cara Gormally and Mara Evans and Peggy Brickman},
   title={Feedback about Teaching in Higher Ed: Neglected Opportunities to Promote Change},
   journal={CBE Life Sciences Education},
@@ -160,7 +160,7 @@
   annotate={Summarizes the best practices for providing instructional feedback, and recommends specific strategies for providing feedback.}
 }
 
-@book{bib:green-babt,
+@book{green-babt,
   author={E. Green},
   title={Building a Better Teacher: How Teaching Works (and How to Teach It to Everyone)},
   publisher={W. W. Norton},
@@ -170,7 +170,7 @@
   annotate={A well-written look at why educational reforms in the past 50 years have mostly missed the mark, and what we should be doing instead.}
 }
 
-@misc{bib:guzdial-blog,
+@misc{guzdial-blog,
   author={Mark Guzdial},
   title={Computing Education Blog},
   howpublished={https://computinged.wordpress.com/},
@@ -178,7 +178,7 @@
   annotate={An informative, frequently-updated blog about computing education.}
 }
 
-@book{bib:guzdial-lcd,
+@book{guzdial-lcd,
   author={Mark Guzdial},
   title={Learner-Centered Design of Computing Education: Research on Computing for Everyone},
   publisher={Morgan & Claypool},
@@ -188,7 +188,7 @@
   annotate={An evidence-based argument that we must design computing education for everyone, not just people who think they are going to become full-time professional programmers.}
 }
 
-@inproceedings{bib:guzdial-mediacomp-retrospective,
+@inproceedings{guzdial-mediacomp-retrospective,
   author={Mark Guzdial},
   title={Exploring Hypotheses About Media Computation},
   booktitle={Proceedings of the Ninth Annual International ACM Conference on International Computing Education Research},
@@ -201,7 +201,7 @@
   annotate={A look back on 10 years of media computation research.}
 }
 
-@misc{bib:buzdial-top10,
+@misc{buzdial-top10,
   author={Mark Guzdial},
   title={Top 10 Myths About Teaching Computer Science},
   howpublished={http://cacm.acm.org/blogs/blog-cacm/189498-top-10-myths-about-teaching-computer-science/fulltext},
@@ -209,7 +209,7 @@
   annotate={Ten things many people believe that aren't true.}
 }
 
-@article{bib:henderson-facilitating,
+@article{henderson-facilitating,
   author={Charles Henderson and Andrea Beach and Noah Finkelstein},
   title={Facilitating change in undergraduate STEM instructional practices: An analytic review of the literature},
   journal={Journal of Research in Science Teaching},
@@ -224,7 +224,7 @@
   annotate={Describes eight approaches to effecting change in STEM education that form a useful framework for thinking about how free-range workshops can go mainstream.}
 }
 
-@book{bib:huston-dont-know,
+@book{huston-dont-know,
   author={Therese Huston},
   title={Teaching What You Don't Know},
   publisher={Harvard University Press},
@@ -234,7 +234,7 @@
   annotate={A pointed, funny, and very useful book that explores exactly what the title suggests.}
 }
 
-@book{bib:kernighan-plauger-elements,
+@book{kernighan-plauger-elements,
   author={Brian W. Kernighan and P.J. Plauger},
   title={The Elements of Programming Style},
   publisher={McGraw-Hill, Inc.},
@@ -245,7 +245,7 @@
   annotate={An early and influential description of the Unix programming philosophy.}
 }
 
-@book{bib:kernighan-pike-upe,
+@book{kernighan-pike-upe,
   author={Brian W. Kernighan and Rob Pike},
   title={The UNIX Programming Environment},
   publisher={Prentice Hall Professional Technical Reference},
@@ -255,7 +255,7 @@
   annotate={An influential early description of Unix.}
 }
 
-@book{bib:kernighan-ritchie-c,
+@book{kernighan-ritchie-c,
   author={Brian W. Kernighan and Dennis M. Ritchie},
   title={The  C Programming Language},
   publisher={Prentice Hall Professional Technical Reference},
@@ -266,7 +266,7 @@
   annotate={The book that made C a popular programming language.}
 }
 
-@article{bib:kirschner-minimal,
+@article{kirschner-minimal,
   author={Paul Kirschner and John Sweller and Richard Clark},
   journal={Educational Psychologist},
   number={2},
@@ -277,7 +277,7 @@
   annotate={Argues that inquiry-based learning is less effective for novices than guided instruction.}
 }
 
-@inproceedings{bib:koedinger-doing-watching,
+@inproceedings{koedinger-doing-watching,
   author={Kenneth R. Koedinger and Jihee Kim and Julianna Zhuxin Jia and Elizabeth A. McLaughlin and Norman L. Bier},
   title={Learning is Not a Spectator Sport: Doing is Better Than Watching for Learning from a MOOC},
   booktitle={Proceedings of the Second (2015) ACM Conference on Learning @ Scale},
@@ -290,7 +290,7 @@
   annotate={Measures the benefits of doing rather than watching.}
 }
 
-@book{bib:lang-small-teaching,
+@book{lang-small-teaching,
   author={James M. Lang},
   title={Small Teaching: Everyday Lessons from the Science of Learning},
   publisher={Jossey-Bass},
@@ -300,7 +300,7 @@
   annotate={Presents a selection of accessible evidence-based practices that teachers can adopt when they little time and few resources.}
 }
 
-@misc{bib:lee-create-inclusive-community,
+@misc{lee-create-inclusive-community,
   author={Cynthia Lee},
   title={What can I do today to create a more inclusive community in CS?},
   howpublished={https://docs.google.com/document/d/1hLivou9-_wmsZuzKI2pCGQu0KHVIgYfJSaYhvTgO0Wo/},
@@ -308,7 +308,7 @@
   annotate={A practical checklist of things instructors can do to make their computing classes more inclusive.}
 }
 
-@book{bib:lemov-champion,
+@book{lemov-champion,
   author={Doug Lemov},
   title={Teach Like a Champion 2.0: 62 Techniques that Put Students on the Path to College},
   publisher={Jossey-Bass},
@@ -319,7 +319,7 @@
   annotate={Presents 62 classroom techniques drawn from intensive study of thousands of hours of video of good teachers in action.}
 }
 
-@book{bib:littky-big-picture,
+@book{littky-big-picture,
   title={The Big Picture: Education is Everyone's Business},
   author={D. Littky and S. Grabelle},
   publisher={Association for Supervision and Curriculum Development},
@@ -329,7 +329,7 @@
   annotate={A personal exploration of the purpose of education and how to make schools better.}
 }
 
-@article{bib:macnamara-deliberate,
+@article{macnamara-deliberate,
   author={Brooke N. Macnamara and David Z. Hambrick and Frederick L. Oswald},
   title={Deliberate Practice and Performance in Music, Games, Sports, Education, and Professions},
   journal={Psychological Science},
@@ -342,7 +342,7 @@
   annotate={A meta-study of the effectiveness of deliberate practice.}
 }
 
-@book{bib:margolis-fisher-clubhouse,
+@book{margolis-fisher-clubhouse,
   author={J. Margolis and A. Fisher},
   title={Unlocking the Clubhouse: Women in Computing},
   publisher={MIT Press},
@@ -352,7 +352,7 @@
   annotate={A groundbreaking report on the gender imbalance in computing, and the steps Carnegie-Mellon took to address the problem.}
 }
 
-@book{bib:margolis-shallow,
+@book{margolis-shallow,
   author={J. Margolis and R. Estrella and J. Goode and J.J. Holme and K. Nao},
   title={Stuck in the Shallow End: Education, Race, and Computing},
   publisher={MIT Press},
@@ -362,7 +362,7 @@
   annotate={A hard-hitting look at racial inequities in computing education.}
 }
 
-@article{bib:mayer-nine-ways,
+@article{mayer-nine-ways,
   author={Richard E. Mayer and Roxana Moreno},
   title={Nine Ways to Reduce Cognitive Load in Multimedia Learning},
   journal={Educational Psychologist},
@@ -372,7 +372,7 @@
   annotate={Shows how research into how we absorb and process information can be applied to the design of instructional materials.}
 }
 
-@article{bib:mueller-note-taking,
+@article{mueller-note-taking,
   author={Pam A. Mueller and Daniel M. Oppenheimer},
   title={The Pen Is Mightier Than the Keyboard},
   journal={Psychological Science},
@@ -384,7 +384,7 @@
   annotate={Presents evidence that taking notes by hand is more effective than taking notes on a laptop.}
 }
 
-@article{bib:orndorff-note-taking,
+@article{orndorff-note-taking,
   author={Harold N. Orndorff III},
   title={Collaborative Note-Taking: The Impact of Cloud Computing on Classroom Performance},
   journal={International Journal of Teaching and Learning in Higher Education},
@@ -395,7 +395,7 @@
   annotate={Presents a study showing that collaborative note-taking improves grades and learning outcomes.}
 }
 
-@inproceedings{bib:patitsas-cs-grades,
+@inproceedings{patitsas-cs-grades,
   author={Elizabeth Patitsas and Jesse Berlin and Michelle Craig and Steve Easterbrook},
   title={Evidence That Computer Science Grades Are Not Bimodal},
   booktitle={Proceedings of the 2016 ACM Conference on International Computing Education Research},
@@ -408,7 +408,7 @@
   annotate={Presents a statistical analysis and an experiment which jointly show that despite popular myth, grades in computing classes are not bimodal–i.e., there is no geek gene.}
 }
 
-@book{bib:petre-expertise,
+@book{petre-expertise,
   author={Marian Petre and André van der Hoek and Yen Quach},
   title={Software Design Decoded: 66 Ways Experts Think},
   publisher={MIT Press},
@@ -418,7 +418,7 @@
   annotate={A short illustrated overview of how expert software developers think.}
 }
 
-@article{bib:porter-what-works,
+@article{porter-what-works,
   author={Leo Porter and Mark Guzdial and Charlie McDowell and Beth Simon},
   title={Success in Introductory Programming: What Works?},
   journal={Communications of the ACM},
@@ -433,7 +433,7 @@
   annotate={Summarizes the evidence that three techniques–peer instruction, media computation, and pair programming–can significantly improve outcomes in introductory programming courses.}
 }
 
-@book{bib:preskill-discussion,
+@book{preskill-discussion,
   author={Stephen D. Brookfield and Stephen Preskill},
   title={The Discussion Book: 50 Great Ways to Get People Talking},
   publisher={Jossey-Bass},
@@ -443,7 +443,7 @@
   annotate={Describes fifty different ways to get groups talking productively.}
 }
 
-@book{bib:ray-ray-unix,
+@book{ray-ray-unix,
   author={Eric J. Ray and Deborah S. Ray},
   title={Unix and Linux: Visual QuickStart Guide},
   publisher={Peachpit Press},
@@ -454,7 +454,7 @@
   annotate={An introduction to Unix that is both a good tutorial and a good reference guide.}
 }
 
-@book{bib:schon-practitioner,
+@book{schon-practitioner,
   author={Donad A. Schön},
   title={The Reflective Practitioner: How Professionals Think In Action},
   publisher={Basic Books},
@@ -464,7 +464,7 @@
   annotate={A groundbreaking look at how professionals in different fields actually solve problems.}
 }
 
-@book{bib:scott-state,
+@book{scott-state,
   title={Seeing Like a State: How Certain Schemes to Improve the Human Condition Have Failed},
   author={Scott, J.C.},
   publisher={Yale University Press},
@@ -474,7 +474,7 @@
   annotate={Presents a compelling case that centrally-managed, top-down ventures will always be less effective than grassroots alternatives because large organizations consistently prefer uniformity over productivity.}
 }
 
-@book{bib:steele-vivaldi,
+@book{steele-vivaldi,
   author={C.M. Steele},
   title={Whistling Vivaldi: And Other Clues to How Stereotypes Affect Us (Issues of Our Time)},
   publisher={W. W. Norton},
@@ -484,7 +484,7 @@
   annotate={Explains and explores stereotype threat and strategies for addressing it.}
 }
 
-@misc{bib:ubell-moocs,
+@misc{ubell-moocs,
   author={Robert Ubell},
   title={How the Pioneers of the MOOC Got It Wrong},
   howpublished={http://spectrum.ieee.org/tech-talk/at-work/education/how-the-pioneers-of-the-mooc-got-it-wrong},
@@ -494,7 +494,7 @@
   annotate={A brief exploration of why MOOCs haven't lived up to claims made for them five years ago.}
 }
 
-@book{bib:wiggins-mctighe,
+@book{wiggins-mctighe,
   author={G.P. Wiggins and J. McTighe},
   title={Understanding by Design},
   publisher={Association for Supervision and Curriculum Development},
