Incorporating Neil Brown's feedback.

--- a/literature.bib
+++ b/literature.bib
@@ -201,7 +201,7 @@
   annotate={A look back on 10 years of media computation research.}
 }
 
-@misc{buzdial-top10,
+@misc{guzdial-top10,
   author={Mark Guzdial},
   title={Top 10 Myths About Teaching Computer Science},
   howpublished={http://cacm.acm.org/blogs/blog-cacm/189498-top-10-myths-about-teaching-computer-science/fulltext},
@@ -362,6 +362,16 @@
   annotate={A hard-hitting look at racial inequities in computing education.}
 }
 
+@article{marsh-hattie-teaching,
+  author={Herbert W. Marsh and John Hattie},
+  title={The Relation Between Research Productivity and Teaching Effectiveness},
+  journal={Journal of Higher Education},
+  volume={73}
+  number={5},
+  year={2002},
+  annotate={One study of many showing there is zero correlation between research ability and teaching effectiveness.}
+}
+
 @article{mayer-nine-ways,
   author={Richard E. Mayer and Roxana Moreno},
   title={Nine Ways to Reduce Cognitive Load in Multimedia Learning},
@@ -502,4 +512,14 @@
   isbn={9781416600350},
   url={https://www.amazon.com/Understanding-Design-Grant-Wiggins/dp/1416600353/},
   annotate={A lengthy presentation of reverse instructional design.}
+}
+
+@book{willingham-dont-like-school
+  author={Daniel T. Willingham},
+  title={Why Don't Students Like School?},
+  publisher={Jossey-Bass},
+  year={2010},
+  isbn={978-0470591963},
+  url={https://www.amazon.com/Why-Dont-Students-Like-School/dp/047059196X/},
+  annotate={A cognitive scientist looks at how the mind works and what it means in the classroom.}
 }
