Adding citation on inequality

--- a/literature.bib
+++ b/literature.bib
@@ -16,7 +16,7 @@
   title={How Learning Works: Seven Research-Based Principles for Smart Teaching},
   publisher={Jossey-Bass},
   year={2010},
-  isbn={0470484101},
+  isbn={978-0470484104},
   url={https://www.amazon.com/How-Learning-Works-Research-Based-Principles/dp/0470484101/},
   annotate={An excellent overview of what we know about education and why we believe it's true, covering everything from cognitive psychology to social factors.}
 }
@@ -90,7 +90,7 @@
   title={Thinking Physics is Gedanken Physics},
   publisher={Insight Press},
   year={2002},
-  isbn={9780935218084},
+  isbn={978-0935218084},
   url={https://www.amazon.com/Thinking-Physics-Understandable-Practical-Reality/dp/0935218084/},
   annotate={An entertaining problem-based introduction to thinking like a physicist.}
 }
@@ -165,7 +165,7 @@
   title={Building a Better Teacher: How Teaching Works (and How to Teach It to Everyone)},
   publisher={W. W. Norton},
   year={2014},
-  isbn={9780393244151},
+  isbn={978-0393244151},
   url={https://www.amazon.com/Building-Better-Teacher-Teaching-Everyone/dp/0393351084/},
   annotate={A well-written look at why educational reforms in the past 50 years have mostly missed the mark, and what we should be doing instead.}
 }
@@ -240,7 +240,7 @@
   publisher={McGraw-Hill, Inc.},
   year={1982},
   edition={2nd},
-  isbn={0070342075},
+  isbn={978-0070342071},
   url={https://www.amazon.com/Elements-Programming-Style-2nd/dp/0070342075/},
   annotate={An early and influential description of the Unix programming philosophy.}
 }
@@ -250,7 +250,7 @@
   title={The UNIX Programming Environment},
   publisher={Prentice Hall Professional Technical Reference},
   year={1984},
-  isbn={013937681X},
+  isbn={978-0139376818},
   url={https://www.amazon.com/Unix-Programming-Environment-Prentice-Hall-Software/dp/013937681X/},
   annotate={An influential early description of Unix.}
 }
@@ -261,7 +261,7 @@
   publisher={Prentice Hall Professional Technical Reference},
   year={1988},
   edition={2nd},
-  isbn={0131103709},
+  isbn={978-0131103709},
   url={https://www.amazon.com/Programming-Language-Brian-W-Kernighan/dp/0131103628/},
   annotate={The book that made C a popular programming language.}
 }
@@ -324,7 +324,7 @@
   author={D. Littky and S. Grabelle},
   publisher={Association for Supervision and Curriculum Development},
   year={2004},
-  isbn={9780871209719},
+  isbn={978-0871209719},
   url={https://www.amazon.com/Big-Picture-Education-Everyones-Business/dp/0871209713/},
   annotate={A personal exploration of the purpose of education and how to make schools better.}
 }
@@ -347,7 +347,7 @@
   title={Unlocking the Clubhouse: Women in Computing},
   publisher={MIT Press},
   year={2003},
-  isbn={9780262632690},
+  isbn={978-0262632690},
   url={https://www.amazon.com/Unlocking-Clubhouse-Women-Computing-Press/dp/0262632691/},
   annotate={A groundbreaking report on the gender imbalance in computing, and the steps Carnegie-Mellon took to address the problem.}
 }
@@ -357,7 +357,7 @@
   title={Stuck in the Shallow End: Education, Race, and Computing},
   publisher={MIT Press},
   year={2010},
-  isbn={9780262260961},
+  isbn={978-0262260961},
   url={https://www.amazon.com/Stuck-Shallow-End-Education-Computing/dp/0262514044/},
   annotate={A hard-hitting look at racial inequities in computing education.}
 }
@@ -479,7 +479,7 @@
   author={Scott, J.C.},
   publisher={Yale University Press},
   year={1999},
-  isbn={9780300128789},
+  isbn={978-0300128789},
   url={https://www.amazon.com/Seeing-like-State-Certain-Condition/dp/0300078153/},
   annotate={Presents a compelling case that centrally-managed, top-down ventures will always be less effective than grassroots alternatives because large organizations consistently prefer uniformity over productivity.}
 }
@@ -489,7 +489,7 @@
   title={Whistling Vivaldi: And Other Clues to How Stereotypes Affect Us (Issues of Our Time)},
   publisher={W. W. Norton},
   year={2011},
-  isbn={9780393341485},
+  isbn={978-0393341485},
   url={https://www.amazon.com/Whistling-Vivaldi-Stereotypes-Affect-Issues/dp/0393339726/},
   annotate={Explains and explores stereotype threat and strategies for addressing it.}
 }
@@ -509,9 +509,18 @@
   title={Understanding by Design},
   publisher={Association for Supervision and Curriculum Development},
   year={2005},
-  isbn={9781416600350},
+  isbn={978-1416600350},
   url={https://www.amazon.com/Understanding-Design-Grant-Wiggins/dp/1416600353/},
   annotate={A lengthy presentation of reverse instructional design.}
+}
+
+@book{wilkinson-pickett-spirit-level,
+  author={Richard Wilkinson and Kate Pickett},
+  title={The Spirit Level: Why Greater Equality Makes Societies Stronger},
+  publisher={Bloomsbury Press},
+  year={2011},
+  isbn={978-1608193417},
+  url={https://www.amazon.com/Spirit-Level-Equality-Societies-Stronger/dp/1608193411/}
 }
 
 @book{willingham-dont-like-school
