Putting section headings into ToC

--- a/literature.bib
+++ b/literature.bib
@@ -366,7 +366,7 @@
   author={Herbert W. Marsh and John Hattie},
   title={The Relation Between Research Productivity and Teaching Effectiveness},
   journal={Journal of Higher Education},
-  volume={73}
+  volume={73},
   number={5},
   year={2002},
   annotate={One study of many showing there is zero correlation between research ability and teaching effectiveness.}
@@ -523,7 +523,7 @@
   url={https://www.amazon.com/Spirit-Level-Equality-Societies-Stronger/dp/1608193411/}
 }
 
-@book{willingham-dont-like-school
+@book{willingham-dont-like-school,
   author={Daniel T. Willingham},
   title={Why Don't Students Like School?},
   publisher={Jossey-Bass},
