More tidying up

--- a/literature.bib
+++ b/literature.bib
@@ -21,6 +21,20 @@
   annotate={An excellent overview of what we know about education and why we believe it's true, covering everything from cognitive psychology to social factors.}
 }
 
+@article{aveling-checklists,
+  author = {Emma-Louise Aveling and Peter McCulloch and Mary Dixon-Woods},
+  title = {A qualitative study comparing experiences of the surgical safety checklist in hospitals in high-income and low-income countries},
+  journal = {BMJ Open},
+  volume = {3},
+  number = {8},
+  year = {2013},
+  doi = {10.1136/bmjopen-2013-003039},
+  publisher = {British Medical Journal Publishing Group},
+  issn = {2044-6055},
+  URL = {http://bmjopen.bmj.com/content/3/8/e003039},
+  annotate={Reports on surgical checklist implementations and effects in the UK and Africa.}
+}
+
 @inproceedings{barker-practice-adoption,
   author={Barker, Lecia and Hovey, Christopher Lynnly and Gruning, Jane},
   title={What Influences CS Faculty to Adopt Teaching Practices?},
@@ -502,6 +516,19 @@
   month={January},
   day={16},
   annotate={A brief exploration of why MOOCs haven't lived up to claims made for them five years ago.}
+}
+
+@article{urbach-checklists,
+  author={David R. Urbach and Anand Govindarajan and Refik Saskin and Andrew S. Wilton and Nancy N. Baxte},
+  title={Introduction of Surgical Safety Checklists in Ontario, Canada},
+  journal={New England Journal of Medicine},
+  volume={370},
+  number={11},
+  pages={1029-1038},
+  year={2014},
+  doi={10.1056/NEJMsa1308261},
+  url={http://dx.doi.org/10.1056/NEJMsa1308261},
+  annotate={Reports a study showing that the introduction of surgical checklists did not have a significant effect on operative outcomes.}
 }
 
 @book{wiggins-mctighe,
