--- a/literature.bib
+++ b/literature.bib
@@ -142,6 +142,17 @@
   annotate={A detailed look at a particular instance of transferring a teaching practice.}
 }
 
+@book{fink-significant,
+  author={L. Dee Fink},
+  title={Creating Significant Learning Experiences: An Integrated Approach to Designing College Courses},
+  publisher={Jossey-Bass},
+  year={2013},
+  edition={2},
+  isbn={978-1118124253},
+  url={https://www.amazon.com/Creating-Significant-Learning-Experiences-Integrated/dp/1118124251/},
+  annotate={A step-by-step guide to a systematic lesson design process.}
+}
+
 @article{gawande-personal-best,
   author={Atul Gawande},
   title={Personal Best},
@@ -253,7 +264,7 @@
   title={The Elements of Programming Style},
   publisher={McGraw-Hill, Inc.},
   year={1982},
-  edition={2nd},
+  edition={2},
   isbn={978-0070342071},
   url={https://www.amazon.com/Elements-Programming-Style-2nd/dp/0070342075/},
   annotate={An early and influential description of the Unix programming philosophy.}
@@ -274,7 +285,7 @@
   title={The  C Programming Language},
   publisher={Prentice Hall Professional Technical Reference},
   year={1988},
-  edition={2nd},
+  edition={2},
   isbn={978-0131103709},
   url={https://www.amazon.com/Programming-Language-Brian-W-Kernighan/dp/0131103628/},
   annotate={The book that made C a popular programming language.}
